# orion-math

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: AddGTest.cmake  AddTestFromFile.cmake  EnableGoogleTest.cmake  OrionMathConfig.cmake.in  orion-math-config.in
include/cpp-starter/: CMakeLists.txt  cpp-starter.h
include/orion-math/: CMakeLists.txt  abs.h  angles.h  common.h  concepts.h  constants.h  func.h  sqrt.h  trig.h
include/orion-math/matrix/: CMakeLists.txt  matrix.h  matrix2.h  matrix3.h  matrix4.h  transformation.h
include/orion-math/vector/: CMakeLists.txt  _define_component.h  formatter.h  vector.h  vector2.h  vector3.h  vector4.h
src/: CMakeLists.txt  cpp-starter.cpp  main.cpp
tests/: CMakeLists.txt  abs.cpp  angles.cpp  common.cpp  matrix.cpp  sqrt.cpp  test.cpp  transformation.cpp  trig.cpp  vector.cpp
tests/matrix/: CMakeLists.txt  matrix.cpp
tests/vector/: CMakeLists.txt  vector.cpp  vector2.cpp  vector3.cpp  vector4.cpp
